--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mantine/core": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "next": "14.2.5",
